added repository info in the live demo page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
   <meta name=author content="Andrea Giammarchi, @webreflection">
-  <meta name=description content="Screenfit Test">
+  <meta name=description content="Screenfit - https://github.com/WebReflection/screenfit#readme">
   <meta name=apple-mobile-web-app-capable content=yes>
   <meta name=mobile-web-app-capable content=yes>
   <meta name="msapplication-TileColor" content="#000000">
