fixed double triggering on orientationchange

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       'inner: ' + Math.round(innerHeight),
       'avail: ' + Math.round(screen.availHeight)
     ].join(' - ');
+    console.log(Math.random());
   });
   </script>
 </head>
