--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>screenfit live demo</title>
   <meta charset="UTF-8">
-  <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1.0,user-scalable=0">
   <meta name=author content="Andrea Giammarchi, @webreflection">
   <meta name=description content="Screenfit - https://github.com/WebReflection/screenfit#readme">
   <meta name=apple-mobile-web-app-capable content=yes>
